# convert-invert

./: .gitignore  Cargo.toml  README.md  codex-ids.txt  diesel.toml  docker-compose.yml  launch-many.sh  traces-1768780617351.json
llm/: README.md  index.ts  package.json  systemPrompt.txt  tsconfig.json
migrations/2026-02-07-172506_add_search_item_table/: down.sql  up.sql
migrations/2026-02-08-190650_add_downloadable_file/: down.sql  up.sql
migrations/2026-02-08-190838_add_judge_submission_table/: down.sql  up.sql
migrations/2026-02-08-191107_add_downloaded_file_table/: down.sql  up.sql
migrations/2026-02-08-191156_add_retry_request_table/: down.sql  up.sql
migrations/2026-02-08-191357_rejected_track/: up.sql
src/: main.rs  tracing
src/internals/: mod.rs
src/internals/context/: context_manager.rs  mod.rs
src/internals/database/: manager.rs  mod.rs  model.rs  schema.rs
src/internals/download/: download_manager.rs
src/internals/judge/: judge_manager.rs  mod.rs
src/internals/judge/judges/: levenshtein.rs  llm.rs  mod.rs
src/internals/parsing/: deserialize.rs  mod.rs  model.rs  parse_manager.rs  sample.json
src/internals/query/: mod.rs  query_manager.rs
src/internals/search/: mod.rs  search_manager.rs  threaded_search.rs
src/internals/utils/config/: config_manager.rs
src/internals/utils/trace/: base_trace.rs  mod.rs  otel_trace.rs
