[package]
name = "convert_invert"
version = "0.1.0"
edition = "2024"
[lib]
path = "./src/lib.rs"
[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
indicatif = "0.18.3"
llm = "1.3.6"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
soulseek-rs-lib = "0.3.0"
str-distance = "0.1.0"
tokio = { version = "1.48.0", features = ["full"] }
