[package]
name = "convert-invert"
version = "0.1.0"
edition = "2024"
default-run = "convert-invert"

[lib]
path = "./src/lib.rs"


[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
console-subscriber = "0.5.0"
indicatif = "0.18.3"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
soulseek-rs-lib = "0.3.0"
str-distance = "0.1.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json",
  "fmt",
] }
opentelemetry-semantic-conventions = "0.31.0"
spotify-rs = "0.4.1"
uuid = "1.19.0"
dotenvy = "0.15.7"
src = "0.0.6"
rand = "0.9.2"
